add book five, standardize blockquotes

--- a/src/economic-democracy/02.md
+++ b/src/economic-democracy/02.md
@@ -18,7 +18,7 @@ In the sphere of politics it is clear that all settled principle other than the 
 
 In its relations with labour, the State is hardly more happy. In the interim report of the Commission on Industrial Unrest, the following statement occurs:-—
 
-> "There is no doubt that one cause of labour unrest is that workmen have come to regard the promises and pledges of Parliament and Government Departments with suspicion and distrust."
+> There is no doubt that one cause of labour unrest is that workmen have come to regard the promises and pledges of Parliament and Government Departments with suspicion and distrust.
 
 In industry itself, the perennial struggle between the forces of Capital and Labour, on questions of wages and hours of work, is daily becoming complicated by the introduction of fresh issues such as welfare, status and discipline, and it is universally recognised that the periodic strikes which convulse one trade after another, have common roots far deeper than the immediate matter of contention. In the very ranks of Trade Unionism, whose organisation has become centralised in opposition to concentrated capital, cleavage is evident in the acrimonious squabbles between the skilled and the unskilled, the rank and file and the Trade Union official.
 
