--- a/src/napoleon-notting/02-03.md
+++ b/src/napoleon-notting/02-03.md
@@ -68,7 +68,7 @@ The King slapped both his legs, and waved his feet for a second in the air.
 
 "Oh, hang you--but, of course, I see. You want me to clear the room of these reasonable sows. You want the two humorists alone together. Leave us, gentlemen."
 
-Buck threw a sour look at Barker, and at a sullen signal the whole pageant of blue and green, of red, gold and purple rolled out of the room, leaving only two in the great hall, the King sitting in his seat on the daïs, and the red-clad figure still kneeling on the floor before his fallen sword.
+Buck threw a sour look at Barker, and at a sullen signal the whole pageant of blue and green, of red, gold and purple rolled out of the room, leaving only two in the great hall, the King sitting in his seat on the dais, and the red-clad figure still kneeling on the floor before his fallen sword.
 
 The King bounded down the steps and smacked Provost Wayne on the back.
 
