--- a/src/napoleon-notting/03-01.md
+++ b/src/napoleon-notting/03-01.md
@@ -14,15 +14,15 @@ This difference, as the King pointed out, consisted in the fact that, while mere
 
 This kind of thing went on for several pages, and then the critic remembered his subject, and returned to it.
 
-> "Poet, whose cunning carved this amorous shell,
+> Poet, whose cunning carved this amorous shell,
 >
-> Where twain may dwell."
+> Where twain may dwell.
 
 "The peculiarity of these fine though feminine lines," continued "Thunderbolt," "is, as we have said, that they praise the hansom cab by comparing it to the shell, to a natural thing. Now, hear the author of 'Hymns on the Hill,' and how he deals with the same subject. In his fine nocturne, entitled 'The Last Omnibus,' he relieves the rich and poignant melancholy of the theme by a sudden sense of rushing at the end--
 
-> 'The wind round the old street corner
+> The wind round the old street corner
 >
-> Swung sudden and quick as a cab.'
+> Swung sudden and quick as a cab.
 
 "Here the distinction is obvious. 'Daisy Daydream' thinks it a great compliment to a hansom cab to be compared to one of the spiral chambers of the sea. And the author of 'Hymns on the Hill' thinks it a great compliment to the immortal whirlwind to be compared to a hackney coach. He surely is the real admirer of London. We have no space to speak of all his perfect applications of the idea; of the poem in which, for instance, a lady's eyes are compared, not to stars, but to two perfect street-lamps guiding the wanderer. We have no space to speak of the fine lyric, recalling the Elizabethan spirit, in which the poet, instead of saying that the rose and the lily contend in her complexion, says, with a purer modernism, that the red omnibus of Hammersmith and the white omnibus of Fulham fight there for the mastery. How perfect the image of two contending omnibuses!"
 
