--- a/src/napoleon-notting/03-02.md
+++ b/src/napoleon-notting/03-02.md
@@ -10,7 +10,7 @@ His conversation with the man who kept the shop of curiosities had begun encoura
 
 Wayne's eyes shone suddenly.
 
-"A great saying," he said, "worthy of a man whose merchandise is human history. Terribly quiet; that is in two words the spirit of this age, as I have felt it from my cradle. I sometimes wondered how many other people felt the oppression of this union between quietude and terror. I see blank well-ordered streets and men in black moving about inoffensively, sullenly. It goes on day after day, day after day, and nothing happens; but to me it is like a dream from which I might wake screaming. To me the straightness of our life is the straightness of a thin cord stretched tight. Its stillness is terrible. It might snap with a noise like thunder. And you who sit, amid the *débris* of the great wars, you who sit, as it were, upon a battlefield, you know that war was less terrible than this evil peace; you know that the idle lads who carried those swords under Francis or Elizabeth, the rude Squire or Baron who swung that mace about in Picardy or Northumberland battles, may have been terribly noisy, but were not like us, terribly quiet."
+"A great saying," he said, "worthy of a man whose merchandise is human history. Terribly quiet; that is in two words the spirit of this age, as I have felt it from my cradle. I sometimes wondered how many other people felt the oppression of this union between quietude and terror. I see blank well-ordered streets and men in black moving about inoffensively, sullenly. It goes on day after day, day after day, and nothing happens; but to me it is like a dream from which I might wake screaming. To me the straightness of our life is the straightness of a thin cord stretched tight. Its stillness is terrible. It might snap with a noise like thunder. And you who sit, amid the debris of the great wars, you who sit, as it were, upon a battlefield, you know that war was less terrible than this evil peace; you know that the idle lads who carried those swords under Francis or Elizabeth, the rude Squire or Baron who swung that mace about in Picardy or Northumberland battles, may have been terribly noisy, but were not like us, terribly quiet."
 
 Whether it was a faint embarrassment of conscience as to the original source and date of the weapons referred to, or merely an engrained depression, the guardian of the past looked, if anything, a little more worried.
 
@@ -72,21 +72,21 @@ He came back with two of the torn posters in his hand which were flapping outsid
 
 Wayne bent over them, and read on one
 
-> "LAST FIGHTING.
+> LAST FIGHTING.
 >
 > REDUCTION OF THE CENTRAL DERVISH CITY.
 >
-> REMARKABLE, ETC."
+> REMARKABLE, ETC.
 
 On the other he read
 
-> "LAST SMALL REPUBLIC ANNEXED.
+> LAST SMALL REPUBLIC ANNEXED.
 >
 > NICARAGUAN CAPITAL SURRENDERS AFTER A
 >
 > MONTH"S FIGHTING.
 >
-> GREAT SLAUGHTER."
+> GREAT SLAUGHTER.
 
 Wayne bent over them again, evidently puzzled; then he looked at the dates. They were both dated in August fifteen years before.
 
