--- a/src/orthodoxy/2.md
+++ b/src/orthodoxy/2.md
@@ -4,7 +4,7 @@ The phrases of the street are not only forcible but subtle: for a figure of spee
 
 The modern world is not evil; in some ways the modern world is far too good. It is full of wild and wasted virtues. When a religious scheme is shattered (as Christianity was shattered at the Reformation), it is not merely the vices that are let loose. The vices are, indeed, let loose, and they wander and do damage. But the virtues are let loose also; and the virtues wander more wildly, and the virtues do more terrible damage. The modern world is full of the old Christian virtues gone mad. The virtues have gone mad because they have been isolated from each other and are wandering alone. Thus some scientists care for truth; and their truth is pitiless. Thus some humanitarians only care for pity; and their pity (I am sorry to say) is often untruthful. For example, Mr. Blatchford attacks Christianity because he is mad on one Christian virtue: the merely mystical and almost irrational virtue of charity. He has a strange idea that he will make it easier to forgive sins by saying that there are no sins to forgive. Mr. Blatchford is not only an early Christian, he is the only early Christian who ought really to have been eaten by lions. For in his case the pagan accusation is really true: his mercy would mean mere anarchy. He really is the enemy of the human race--because he is so human. As the other extreme, we may take the acrid realist, who has deliberately killed in himself all human pleasure in happy tales or in the healing of the heart. Torquemada tortured people physically for the sake of moral truth. Zola tortured people morally for the sake of physical truth. But in Torquemada's time there was at least a system that could to some extent make righteousness and peace kiss each other. Now they do not even bow. But a much stronger case than these two of truth and pity can be found in the remarkable case of the dislocation of humility.
 
-It is only with one aspect of humility that we are here concerned. Humility was largely meant as a restraint upon the arrogance and infinity of the appetite of man. He was always outstripping his mercies with his own newly invented needs. His very power of enjoyment destroyed half his joys. By asking for pleasure, he lost the chief pleasure; for the chief pleasure is surprise. Hence it became evident that if a man would make his world large, he must be always making himself small. Even the haughty visions, the tall cities, and the toppling pinnacles are the creations of humility. Giants that tread down forests like grass are the creations of humility. Towers that vanish upwards above the loneliest star are the creations of humility. For towers are not tall unless we look up at them; and giants are not giants unless they are larger than we. All this gigantesque imagination, which is, perhaps, the mightiest of the pleasures of man, is at bottom entirely humble. It is impossible without humility to enjoy anything--even pride.
+It is only with one aspect of humility that we are here concerned. Humility was largely meant as a restraint upon the arrogance and infinity of the appetite of man. He was always outstripping his mercies with his own newly invented needs. His very power of enjoyment destroyed half his joys. By asking for pleasure, he lost the chief pleasure; for the chief pleasure is surprise. Hence it became evident that if a man would make his world large, he must be always making himself small. Even the haughty visions, the tall cities, and the toppling pinnacles are the creations of humility. Giants that tread down forests like grass are the creations of humility. Towers that vanish upwards above the loneliest star are the creations of humility. For towers are not tall unless we look up at them; and giants are not giants unless they are larger than we. All this gigantic imagination, which is, perhaps, the mightiest of the pleasures of man, is at bottom entirely humble. It is impossible without humility to enjoy anything--even pride.
 
 But what we suffer from to-day is humility in the wrong place. Modesty has moved from the organ of ambition. Modesty has settled upon the organ of conviction; where it was never meant to be. A man was meant to be doubtful about himself, but undoubting about the truth; this has been exactly reversed. Nowadays the part of a man that a man does assert is exactly the part he ought not to assert--himself. The part he doubts is exactly the part he ought not to doubt--the Divine Reason. Huxley preached a humility content to learn from Nature. But the new sceptic is so humble that he doubts if he can even learn. Thus we should be wrong if we had said hastily that there is no humility typical of our time. The truth is that there is a real humility typical of our time; but it so happens that it is practically a more poisonous humility than the wildest prostrations of the ascetic. The old humility was a spur that prevented a man from stopping; not a nail in his boot that prevented him from going on. For the old humility made a man doubtful about his efforts, which might make him work harder. But the new humility makes a man doubtful about his aims, which will make him stop working altogether.
 
@@ -27,7 +27,7 @@ Then there is the opposite attack on thought: that urged by Mr. H. G. Wells when
 Akin to these is the false theory of progress, which maintains that we alter the test instead of trying to pass the test. We often hear it said, for instance, "What is right in one age is wrong in another." This is quite reasonable, if it means that there is a fixed aim, and that certain methods attain at certain times and not at other times. If women, say, desire to be elegant, it may be that they are improved at one time by growing fatter and at another time by growing thinner. But you cannot say that they are improved by ceasing to wish to be elegant and beginning to wish to be oblong. If the standard changes, how can there be improvement, which implies a standard? Nietzsche started a nonsensical idea that men had once sought as good what we now call evil; if it were so, we could not talk of surpassing or even falling short of them. How can you overtake Jones if you walk in the other direction? You cannot discuss whether one people has succeeded more in being miserable than another succeeded in being happy. It would be like discussing whether Milton was more puritanical than a pig is fat.
 
 It is true that a man (a silly man) might make change itself his object or ideal. But as an ideal, change itself becomes unchangeable. If the change-worshipper wishes to estimate his own progress, he must be sternly loyal to the ideal of change; he must not begin to flirt gaily with the ideal of monotony. Progress itself cannot progress. It is worth remark, in passing, that when Tennyson, in a wild and rather weak manner, welcomed the idea of infinite alteration in society, he instinctively took a metaphor which suggests an imprisoned tedium. He wrote--
-> "Let the great world spin for ever down the ringing grooves of change."
+> Let the great world spin for ever down the ringing grooves of change.
 
 He thought of change itself as an unchangeable groove; and so it is. Change is about the narrowest and hardest groove that a man can get into.
 
