--- a/src/orthodoxy/3.md
+++ b/src/orthodoxy/3.md
@@ -32,9 +32,9 @@ There were, then, these two first feelings, indefensible and indisputable. The w
 
 Any one can see it who will simply read "Grimm's Fairy Tales" or the fine collections of Mr. Andrew Lang. For the pleasure of pedantry I will call it the Doctrine of Conditional Joy. Touchstone talked of much virtue in an "if"; according to elfin ethics all virtue is in an "if." The note of the fairy utterance always is, "You may live in a palace of gold and sapphire, *if* you do not say the word 'cow'"; or "You may live happily with the King's daughter, *if* you do not show her an onion." The vision always hangs upon a veto. All the dizzy and colossal things conceded depend upon one small thing withheld. All the wild and whirling things that are let loose depend upon one thing that is forbidden. Mr. W. B. Yeats, in his exquisite and piercing elfin poetry, describes the elves as lawless; they plunge in innocent anarchy on the unbridled horses of the air--
 
-> "Ride on the crest of the dishevelled tide,
+> Ride on the crest of the dishevelled tide,
 >
-> And dance upon the mountains like aflame."
+> And dance upon the mountains like aflame.
 
 It is a dreadful thing to say that Mr. W. B. Yeats does not understand fairyland. But I do say it. He is an ironical Irishman, full of intellectual reactions. He is not stupid enough to understand fairyland. Fairies prefer people of the yokel type like myself; people who gape and grin and do as they are told. Mr. Yeats reads into elfland all the righteous insurrection of his own race. But the lawlessness of Ireland is a Christian lawlessness, founded on reason and justice. The Fenian is rebelling against something he understands only too well; but the true citizen of fairyland is obeying something that he does not understand at all. In the fairy tale an incomprehensible happiness rests upon an incomprehensible condition. A box is opened, and all evils fly out. A word is forgotten, and cities perish. A lamp is lit, and love flies away. A flower is plucked, and human lives are forfeited. An apple is eaten, and the hope of God is gone.
 
