--- a/src/orthodoxy/5.md
+++ b/src/orthodoxy/5.md
@@ -16,7 +16,9 @@ This odd effect of the great agnostics in arousing doubts deeper than their own 
 
 Thus, for instance, I was much moved by the eloquent attack on Christianity as a thing of inhuman gloom; for I thought (and still think) sincere pessimism the unpardonable sin. Insincere pessimism is a social accomplishment, rather agreeable than otherwise; and fortunately nearly all pessimism is insincere. But if Christianity was, as these people said, a thing purely pessimistic and opposed to life, then I was quite prepared to blow up St. Paul's Cathedral. But the extraordinary thing is this. They did prove to me in Chapter I. (to my complete satisfaction) that Christianity was too pessimistic; and then, in Chapter II., they began to prove to me that it was a great deal too optimistic. One accusation against Christianity was that it prevented men, by morbid tears and terrors, from seeking joy and liberty in the bosom of Nature. But another accusation was that it comforted men with a fictitious providence, and put them in a pink-and-white nursery. 'One great agnostic asked why Nature was not beautiful enough, and why it was hard to be free. Another great agnostic objected that Christian optimism, "the garment of make-believe woven by pious hands," hid from us the fact that Nature was ugly, and that it was impossible to be free. One rationalist had hardly done calling Christianity a nightmare before another began to call it a fool's paradise. This puzzled me; the charges seemed inconsistent. Christianity could not at once be the black mask on a white world, and also the white mask on a black world. The state of the Christian could not be at once so comfortable that he was a coward to cling to it, and so uncomfortable that he was a fool to stand it. If it falsified human vision it must falsify it one way or another; it could not wear both green and rose-coloured spectacles. I rolled on my tongue with a terrible joy, as did all young men of that time, the taunts which Swinburne hurled at the dreariness of the creed--
 
-> "Thou hast conquered, O pale Galilaean, the world has grown gray with Thy breath."
+> Thou hast conquered, O pale Galilaean,
+>
+> the world has grown gray with Thy breath.
 
 But when I read the same poet's accounts of paganism (as in "Atalanta"), I gathered that the world was, if possible, more gray before the Galilaean breathed on it than afterwards. The poet maintained, indeed, in the abstract, that life itself was pitch dark. And yet, somehow, Christianity had darkened it. The very man who denounced Christianity for pessimism was himself a pessimist. I thought there must be something wrong. And it did for one wild moment cross my mind that, perhaps, those might not be the very best judges of the relation of religion to happiness who, by their own account, had neither one nor the other.
 
