--- a/src/orthodoxy/7.md
+++ b/src/orthodoxy/7.md
@@ -32,11 +32,15 @@ It is just here that Buddhism is on the side of modern pantheism and immanence. 
 
 This is the meaning of that almost insane happiness in the eyes of the mediaeval saint in the picture. This is the meaning of the sealed eyes of the superb Buddhist image. The Christian saint is happy because he has verily been cut off from the world; he is separate from things and is staring at them in astonishment. But why should the Buddhist saint be astonished at things? since there is really only one thing, and that being impersonal can hardly be astonished at itself. There have been many pantheist poems suggesting wonder, but no really successful ones. The pantheist cannot wonder, for he cannot praise God or praise anything as really distinct from himself. Our immediate business here however is with the effect of this Christian admiration (which strikes outwards, towards a deity distinct from the worshipper) upon the general need for ethical activity and social reform. And surely its effect is sufficiently obvious. There is no real possibility of getting out of pantheism any special impulse to moral action. For pantheism implies in its nature that one thing is as good as another; whereas action implies in its nature that one thing is greatly preferable to another. Swinburne in the high summer of his scepticism tried in vain to wrestle with this. difficulty. In "Songs before Sunrise," written under the inspiration of Garibaldi and the revolt of Italy, he proclaimed the newer religion and the purer God which should wither up all the priests of the world.
 
-> "What doest thou now
+> What doest thou now
+>
 > Looking Godward to cry
+>
 > I am I, thou art thou,
+>
 > I am low, thou art high,
-> I am thou that thou seekest to find him, find thou but thyself, thou art I."
+>
+> I am thou that thou seekest to find him, find thou but thyself, thou art I.
 
 Of which the immediate and evident deduction is that tyrants are as much the sons of God as Garibaldis; and that King Bomba of Naples having, with the utmost success, "found himself" is identical with the ultimate good in all things. The truth is that the western energy that dethrones tyrants has been directly due to the western theology that says "I am I, thou art thou." The same spiritual separation which looked up and saw a good king in the universe looked up and saw a bad king in Naples. The worshippers of Bomba's god dethroned Bomba. The worshippers of Swinburne's god have covered Asia for centuries and have never dethroned a tyrant. The Indian saint may reasonably shut his eyes because he is looking at that which is I and Thou and We and They and It. It is a rational occupation: but it is not true in theory and not true in fact that it helps the Indian to keep an eye on Lord Curzon. That external vigilance which has always been the mark of Christianity (the command that we should *watch* and pray) has expressed itself both in typical western orthodoxy and in typical western politics: but both depend on the idea of a divinity transcendent, different from ourselves, a deity that disappears. Certainly the most sagacious creeds may suggest that we should pursue God into deeper and deeper rings of the labyrinth of our own ego. But only we of Christendom have said that we should hunt God like an eagle upon the mountains: and we have killed all monsters in the chase.
 
