--- a/src/orthodoxy/8.md
+++ b/src/orthodoxy/8.md
@@ -14,7 +14,7 @@ And if we took the third chance instance, it would be the same; the view that pr
 
 Thus these three facts of experience, such facts as go to make an agnostic, are, in this view, turned totally round. I am left saying, "Give me an explanation, first, of the towering eccentricity of man among the brutes; second, of the vast human tradition of some ancient happiness; third, of the partial perpetuation of such pagan joy in the countries of the Catholic Church." One explanation, at any rate, covers all three: the theory that twice was the natural order interrupted by some explosion or revelation such as people now call "psychic." Once Heaven came upon the earth with a power or seal called the image of God, whereby man took command of Nature; and once again (when in empire after empire men had been found wanting) Heaven came to save mankind in the awful shape of a man. This would explain why the mass of men always look backwards; and why the only corner where they in any sense look forwards is the little continent where Christ has His Church. I know it will be said that Japan has become progressive. But how can this be an answer when even in saying "Japan has become progressive," we really only mean, "Japan has become European"? But I wish here not so much to insist on my own explanation as to insist on my original remark. I agree with the ordinary unbelieving man in the street in being guided by three or four odd facts all pointing to something; only when I came to look at the facts I always found they pointed to something else.
 
-I have given an imaginary triad of such ordinary anti-Christian arguments; if that be too narrow a basis I will give on the spur of the moment another. These are the kind of thoughts which in combination create the impression that Christianity is something weak and diseased. First, for instance, that Jesus was a gentle creature, sheepish and unworldly, a mere ineffectual appeal to the world; second, that Christianity arose and flourished in the dark ages of ignorance, and that to these the Church would drag us back; third, that the people still strongly religious or (if you will) superstitious--such people as the Irish--are weak, unpractical, and behind the times. I only mention these ideas to affirm the same thing: that when I looked into them independently I found, not that the conclusions were unphilosophical, but simply that the facts were not facts. Instead of looking at books and pictures about the New Testament I looked at the New Testament. There I found an account, not in the least of a person with his hair parted in the middle or his hands clasped in appeal, but of an extraordinary being with lips of thunder and acts of lurid decision, flinging down tables, casting out devils, passing with the wild secrecy of the wind from mountain isolation to a sort of dreadful demagogy; a being who often acted like an angry god--and always like a god. Christ had even a literary style of his own, not to be found, I think, elsewhere; it consists of an almost furious use of the *a fortiori.* His "how much more" is piled one upon another like castle upon castle in the clouds. The diction used *about* Christ has been, and perhaps wisely, sweet and submissive. But the diction used by Christ is quite curiously gigantesque; it is full of camels leaping through needles and mountains hurled into the sea. Morally it is equally terrific; he called himself a sword of slaughter, and told men to buy swords if they sold their coats for them. That he used other even wilder words on the side of non-resistance greatly increases the mystery; but it also, if anything, rather increases the violence. We cannot even explain it by calling such a being insane; for insanity is usually along one consistent channel. The maniac is generally a monomaniac. Here we must remember the difficult definition of Christianity already given; Christianity is a superhuman paradox whereby two opposite passions may blaze beside each other. The one explanation of the Gospel language that does explain it, is that it is the survey of one who from some supernatural height beholds some more startling synthesis.
+I have given an imaginary triad of such ordinary anti-Christian arguments; if that be too narrow a basis I will give on the spur of the moment another. These are the kind of thoughts which in combination create the impression that Christianity is something weak and diseased. First, for instance, that Jesus was a gentle creature, sheepish and unworldly, a mere ineffectual appeal to the world; second, that Christianity arose and flourished in the dark ages of ignorance, and that to these the Church would drag us back; third, that the people still strongly religious or (if you will) superstitious--such people as the Irish--are weak, unpractical, and behind the times. I only mention these ideas to affirm the same thing: that when I looked into them independently I found, not that the conclusions were unphilosophical, but simply that the facts were not facts. Instead of looking at books and pictures about the New Testament I looked at the New Testament. There I found an account, not in the least of a person with his hair parted in the middle or his hands clasped in appeal, but of an extraordinary being with lips of thunder and acts of lurid decision, flinging down tables, casting out devils, passing with the wild secrecy of the wind from mountain isolation to a sort of dreadful demagogy; a being who often acted like an angry god--and always like a god. Christ had even a literary style of his own, not to be found, I think, elsewhere; it consists of an almost furious use of the *a fortiori.* His "how much more" is piled one upon another like castle upon castle in the clouds. The diction used *about* Christ has been, and perhaps wisely, sweet and submissive. But the diction used by Christ is quite curiously gigantic; it is full of camels leaping through needles and mountains hurled into the sea. Morally it is equally terrific; he called himself a sword of slaughter, and told men to buy swords if they sold their coats for them. That he used other even wilder words on the side of non-resistance greatly increases the mystery; but it also, if anything, rather increases the violence. We cannot even explain it by calling such a being insane; for insanity is usually along one consistent channel. The maniac is generally a monomaniac. Here we must remember the difficult definition of Christianity already given; Christianity is a superhuman paradox whereby two opposite passions may blaze beside each other. The one explanation of the Gospel language that does explain it, is that it is the survey of one who from some supernatural height beholds some more startling synthesis.
 
 I take in order the next instance offered: the idea that Christianity belongs to the dark ages. Here I did not satisfy myself with reading modern generalisations; I read a little history. And in history I found that Christianity, so far from belonging to the dark ages, was the one path across the dark ages that was not dark. It was a shining bridge connecting two shining civilisations. If anyone says that the faith arose in ignorance and savagery the answer is simple: it didn't. It arose in the Mediterranean civilisation in the full summer of the Roman Empire. The world was swarming with sceptics, and pantheism was as plain as the sun, when Constantine nailed the cross to the mast. It is perfectly true that afterwards the ship sank; but it is far more extraordinary that the ship came up again: repainted and glittering, with the cross still at the top. This is the amazing thing the religion did: it turned a sunken ship into a submarine. The ark lived under the load of waters; after being buried under the debris of dynasties and clans, we arose and remembered Rome. If our faith had been a mere fad of the fading empire, fad would have followed fad in the twilight, and if the civilisation ever re-emerged (and many such have never re-emerged) it would have been under some new barbaric flag. But the Christian Church was the last life of the old society and was also the first life of the new. She took the people who were forgetting how to make an arch and she taught them to invent the Gothic arch. In a word, the most absurd thing that could be said of the Church is the thing we have all heard said of it. How can we say that the Church wishes to bring us back into the Dark Ages? The Church was the only thing that ever brought us out of them.
 
