--- a/src/napoleon-notting/03-03.md
+++ b/src/napoleon-notting/03-03.md
@@ -202,7 +202,7 @@ The wind blew round them as they sat at their little table, with its white cloth
 
 "Yesterday I thought that something next door to a really entertaining miracle might happen to me before I went to amuse the worms. To see that red-haired maniac waving a great sword, and making speeches to his incomparable followers, would have been a glimpse of that Land of Youth from which the Fates shut us out. I had planned some quite delightful things. A Congress of Knightsbridge with a treaty, and myself in the chair, and perhaps a Roman triumph, with jolly old Barker led in chains. And now these wretched prigs have gone and stamped out the exquisite Mr. Wayne altogether, and I suppose they will put him in a private asylum somewhere in their damned humane way. Think of the treasures daily poured out to his unappreciative keeper! I wonder whether they would let me be his keeper. But life is a vale. Never forget at any moment of your existence to regard it in the light of a vale. This graceful habit, if not acquired in youth--"
 
-The King stopped, with his cigar lifted, for there had slid into his eyes the startled look of a man listening. He did not move for a few moments; then he turned his head sharply towards the high, thin, and lath-like paling which fenced certain long gardens and similar spaces from the lane. From behind it there was coming a curious scrambling and scraping noise, as of a desperate thing imprisoned in this box of thin wood. The King threw away his cigar, and jumped on to the table. From this position he saw a pair of hands hanging with a hungry clutch on the top of the fence. Then the hands quivered with a convulsive effort, and a head shot up between them--the head of one of the Bayswater Town Council, his eyes and whiskers wild with fear. He swung himself over, and fell on the other side on his face, and groaned openly and without ceasing. The next moment the thin, taut wood of the fence was struck as by a bullet, so that it reverberated like a drum, and over it came tearing and cursing, with torn clothes and broken nails and bleeding faces, twenty men at one rush. The King sprang five feet clear off the table on to the ground. The moment after the table was flung over, sending bottles and glasses flying, and the *débris* was literally swept along the ground by that stream of men pouring past, and Bowler was borne along with them, as the King said in his famous newspaper article, "like a captured bride." The great fence swung and split under the load of climbers that still scaled and cleared it. Tremendous gaps were torn in it by this living artillery; and through them the King could see more and more frantic faces, as in a dream, and more and more men running. They were as miscellaneous as if some one had taken the lid off a human dustbin. Some were untouched, some were slashed and battered and bloody, some were splendidly dressed, some tattered and half -naked, some were in the fantastic garb of the burlesque cities, some in the dullest modern dress. The King stared at all of them, but none of them looked at the King. Suddenly he stepped forward.
+The King stopped, with his cigar lifted, for there had slid into his eyes the startled look of a man listening. He did not move for a few moments; then he turned his head sharply towards the high, thin, and lath-like paling which fenced certain long gardens and similar spaces from the lane. From behind it there was coming a curious scrambling and scraping noise, as of a desperate thing imprisoned in this box of thin wood. The King threw away his cigar, and jumped on to the table. From this position he saw a pair of hands hanging with a hungry clutch on the top of the fence. Then the hands quivered with a convulsive effort, and a head shot up between them--the head of one of the Bayswater Town Council, his eyes and whiskers wild with fear. He swung himself over, and fell on the other side on his face, and groaned openly and without ceasing. The next moment the thin, taut wood of the fence was struck as by a bullet, so that it reverberated like a drum, and over it came tearing and cursing, with torn clothes and broken nails and bleeding faces, twenty men at one rush. The King sprang five feet clear off the table on to the ground. The moment after the table was flung over, sending bottles and glasses flying, and the debris was literally swept along the ground by that stream of men pouring past, and Bowler was borne along with them, as the King said in his famous newspaper article, "like a captured bride." The great fence swung and split under the load of climbers that still scaled and cleared it. Tremendous gaps were torn in it by this living artillery; and through them the King could see more and more frantic faces, as in a dream, and more and more men running. They were as miscellaneous as if some one had taken the lid off a human dustbin. Some were untouched, some were slashed and battered and bloody, some were splendidly dressed, some tattered and half -naked, some were in the fantastic garb of the burlesque cities, some in the dullest modern dress. The King stared at all of them, but none of them looked at the King. Suddenly he stepped forward.
 
 "Barker," he said, "what is all this?"
 
