--- a/src/orthodoxy/4.md
+++ b/src/orthodoxy/4.md
@@ -21,10 +21,14 @@ We say there must be a primal loyalty to life: the only question is, shall it be
 Perhaps the most everyday instance of this point is in the case of women; and their strange and strong loyalty. Some stupid people started the idea that because women obviously back up their own people through everything, therefore women are blind and do not see anything. They can hardly have known any women. The same women who are ready to defend their men through thick and thin are (in their personal intercourse with the man) almost morbidly lucid about the thinness of his excuses or the thickness of his head. A man's friend likes him but leaves him as he is: his wife loves him and is always trying to turn him into somebody else. Women who are utter mystics in their creed are utter cynics in their criticism. Thackeray expressed this well when he made Pendennis' mother, who worshipped her son as a god, yet assume that he would go wrong as a man. She underrated his virtue, though she overrated his value. The devotee is entirely free to criticise; the fanatic can safely be a sceptic. Love is not blind; that is the last thing that it is. Love is bound; and the more it is bound the less it is blind.
 
 This at least had come to be my position about all that was called optimism, pessimism, and improvement. Before any cosmic act of reform we must have a cosmic oath of allegiance. A man must be interested in life, then he could be disinterested in his views of it. "My son give me thy heart"; the heart must be fixed on the right thing: the moment we have a fixed heart we have a free hand. I must pause to anticipate an obvious criticism. It will be said that a rational person accepts the world as mixed of good and evil with a decent satisfaction and a decent endurance. But this is exactly the attitude which I maintain to be defective. It is, I know, very common in this age; it was perfectly put in those quiet lines of Matthew Arnold which are more piercingly blasphemous than the shrieks of Schopenhauer--
-> "Enough we live:--and if a life,
+
+> Enough we live:--and if a life,
+>
 > With large results so little rife,
+>
 > Though bearable, seem hardly worth
->This pomp of worlds, this pain of birth."
+>
+> This pomp of worlds, this pain of birth.
 
 I know this feeling fills our epoch, and I think it freezes our epoch. For our Titanic purposes of faith and revolution, what we need is not the cold acceptance of the world as a compromise, but some way in which we can heartily hate and heartily love it. We do not want joy and anger to neutralise each other and produce a surly contentment; we want a fiercer delight and a fiercer discontent. We have to feel the universe at once as an ogre's castle, to be stormed, and yet as our own cottage, to which we can return at evening.
 
