Publish "A Guildman's Interpretation of History" by Arthur Penty

--- a/src/guilds-trade/03.md
+++ b/src/guilds-trade/03.md
@@ -10,7 +10,7 @@ A generation ago it was the custom to belaud these large organizations; to assum
 
 [^1]: An introduction to the *Economic History of England*, by E. Lipson, pp. 282-3.
 
-[^2]: See chapter on Limited Liability Companies in my *A Guildman's Interpretation of History*.
+[^2]: See [chapter on Limited Liability Companies in my *A Guildman's Interpretation of History*](https://cadenhaustein.com/books/guildsman-history/chapter_018/).
 
 The evil inherent in joint-stock companies was not fatal to them at first, since before the acknowledgment of the principle of limited liability in law they were few and far between, and so it became possible for them to renew their organization, wherever it was defective, by recruiting from outside their ranks. But once they become general, the evil inherent in them rapidly developed; for it soon became apparent that the divorce of ownership from management upon which they were based brought into existence horizontal and class divisions between those in their employ; and this spread disaffection everywhere. For men began to find that their future depended less on themselves than on the attitude of their immediate superiors towards them. In the higher ranks, these circumstances led to those jealousies and feuds by which all large organizations are distracted. In the lower ones it led to apathy and indifference; for when large organizations took away liberty from the individual they took away from him all living interest in his work. The effect of it all has been the destruction of the sense of responsibility. This results in a loss of efficiency. Expenses go up and up, and there seems to be no stopping them. Recourse is had to amalgamations. But it is all of no avail; for the soul has gone out of the body and there is no restoring it.
 
